# machinator

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BLOCKER.md  BUILD  LOG.md  MODULE.bazel  README.md  SCRUM_MASTER.md  WORKSPACE  bd  build.sh  build_linux.sh  dummy-gemini-linux  go.mod  go.sum  mock-bd.sh  run_test.sh  run_vhs_tapes.sh  setup_go_env.sh  test_cli.sh
.agent/plans/: architecture-vision.md
.agent/workflows/: ui-review-checklist.md
.beads/: issues.jsonl
.gemini/: sandbox-macos-custom.sb
.gemini/tmp/: directive_machinator-9yr.txt  directive_machinator-em7.txt  directive_machinator-sbi.txt  test_output.txt  test_template.txt
.github/workflows/: comprehensive-tests.yml  fast-tests.yml  vhs.yml
_archive/: install_vhs.sh
_archive/2026-01-11/: directive_copy.txt  setup_and_install_vhs.sh  setup_go_env_machinator.sh  setup_go_env_task.sh  simple.tape  test.tape  test_check.sh  test_full_path.tape  test_sh.tape  ttyd_symlink_from_go_cache  verify_dir.go
_archive/2026-01-11/orchestrator_archived/: acp_events.go
_archive/2026-01-11/setup_archived/: init.sh
_archive/2026-01-11/task-9yr-cleanup/: setup_go_env_task.sh
_archive/2026-01-11/task-9yr-cleanup/vhs_0.10.0_Darwin_arm64/completions/: vhs.bash
_archive/2026-01-11/tools_archived/dummy-gemini/: dummy-gemini
_archive/orchestrator/: tui.go
_archive/task-43q/: setup_vhs.sh
_archive/task-9yr-cleanup/ttyd/1.7.7_6/: sbom.spdx.json
backend/: BUILD  go.mod  go.sum  machinator
backend/_archive/: view_beads.go
backend/cmd/machinator/: BUILD.bazel  main.go
backend/internal/beads/: BUILD  BUILD.bazel  beads.go  beads_upstream_test.go
backend/internal/config/: BUILD.bazel  config.go  utils.go
backend/internal/project/: BUILD.bazel  config.go
backend/internal/quota/: BUILD.bazel  quota.go
backend/internal/setup/: BUILD.bazel  setup.go
backend/internal/state/: BUILD.bazel  state.go
backend/internal/tui/: BUILD  BUILD.bazel  logger.go  tui.go  utils.go  view_beads.go  view_beads_detail.go  view_beads_list.go  view_config.go  view_git.go  view_left.go  view_logs.go
bootstrap/: BUILD  README.md  check_gates.sh  check_quota.sh  directive_template.txt  gemini_watchdog.sh  orchestrator_with_quota.sh  run.sh  setup_go_env.sh  stop.sh  tmux_agent_setup.sh  unblocking_directive.txt
demo-repo/: AGENTS.md
demo-repo/machinator/: check_quota.sh
demo-repo/templates/: directive_template.txt
docs/reference/: config.md
orchestrator/: BUILD  nameplate.txt  quota_check.go  tui.go  tui_helper.go
orchestrator/cmd/machinator/: BUILD  main.go
orchestrator/cmd/setup/: BUILD  main.go  main_test.go  nameplate.txt
orchestrator/cmd/setup/testdata/: TestMainScreenGolden.golden  TestProjectDetailModalGolden.golden  main_screen.golden
orchestrator/e2e/: .gitignore  BUILD.bazel  README_LOCAL.md  check-vhs.sh  crud.tape  main_test.go  navigation.tape  orchestrator_main.tape  orchestrator_run.tape  run_vhs.sh
orchestrator/pkg/accountpool/: BUILD  loader_test.go  pool.go  pool_test.go  types.go
orchestrator/pkg/orchestrator/: BUILD  acp_events.go  acp_events_test.go  branch_protection_test.go  claiming_test.go  done_routing_test.go  find_ready_task_test.go  git_prep_test.go  multi_agent_test.go  pull_test.go  quota_check.go  quota_render_test.go  quota_visual_test.go  recovery_test.go  repro_test.go  staleness_test.go  tools_check.go  tools_check_test.go  tui.go  tui_golden_test.go  tui_helper.go  tui_test.go  worktree_test.go
orchestrator/pkg/setup/: BUILD  accounts.go  accounts_test.go  config.go  config_test.go  model.go  quota_validation_test.go  rename_repro_test.go  setup.go  setup_test.go
orchestrator/pkg/setup/testdata/: TestAddAccountAPIKeyGolden.golden  TestAddAccountAuthTypeGolden.golden  TestAddAccountGoogleInfoGolden.golden  TestAddAccountNameGolden.golden  TestAddProjectBranchGolden.golden  TestAddProjectInputGolden.golden  TestDeleteConfirmationModalGolden.golden  TestEditFieldModalGolden.golden  TestHelpModalGolden.golden  TestInitScreenGolden.golden  TestMainScreenGolden.golden  TestManageAccountsGolden.golden  TestProjectDetailModalGolden.golden  TestValidationModalGolden.golden
orchestrator/pkg/ui/agentgrid/: BUILD  card.go  card_test.go  grid.go  grid_test.go
orchestrator/pkg/ui/agentgrid/demo/: BUILD.bazel  main.go
orchestrator/pkg/ui/components/: BUILD  button.go  clickable.go  components_test.go  dropdown.go  dropdown_test.go  list_item.go
orchestrator/pkg/ui/styles/: BUILD  styles.go
orchestrator/tools/dummy-gemini/: BUILD  main.go  main_test.go
planning/: api.md  architecture-vision.md  directory-structure.md  documentation-strategy.md  lessons-learned.md  orchestrator-core.md  session-handoff-2026-01-12.md  ui-component-system.md  ui-testing-strategy.md
scripts/: BUILD  dev_setup.sh  fix-all.sh  pre-commit  resolve-vhs-gates.sh  update-ui.sh  vhs-docker.sh  wait_for_vhs_ci.sh
scripts/hooks/: post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
templates/: BUILD  directive_template.txt  setup_go_env.sh  unblocking_directive.txt
testdata/fixture-repo/: BUILD
testdata/fixture-repo/.beads/: .gitignore  config.yaml  issues.jsonl  sync-state.json
testdata/vhs-fixture/.machinator/: gemini  settings.json
testing/: BUILD  golden.bzl  golden_test.sh  update_all.sh
tmp_machinator_home/: .bd_state.json
tmp_machinator_home/projects/1/: project.json
tools/dummy-gemini/: BUILD  main.go
tools/fixture-gen/: BUILD  main.go
tools/mock-bd/: BUILD  main.go  main_test.go
tools/vhs/: Dockerfile
v2-docs/: README.md
v2-docs/concepts/: how-it-works.md
v2-docs/planning/: architecture-vision.md  directory-structure.md  documentation-strategy.md  lessons-learned.md  session-handoff-2026-01-12.md  ui-component-system.md  ui-testing-strategy.md
v2-docs/reference/: config.md
(+16 files in other folders)
