module(
    name = "machinator",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.40.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//backend:go.mod")
use_repo(
    go_deps,
    "com_github_gdamore_tcell_v2",
    "com_github_go_git_go_git_v5",
    "com_github_rivo_tview",
    "in_gopkg_yaml_v3",
)
