load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "e2e_test",
    srcs = ["main_test.go"],
    data = [
        "//orchestrator/cmd/machinator",
        "//tools/dummy-gemini",
        ":auto_built_binaries",
        "//testdata/fixture-repo:files",
        "//templates",
        "//:AGENTS.md",
        "//:go.mod",
        "//:bd",
        "//:mock-bd.sh",
        "//bootstrap:check_quota.sh",
    ],
    deps = ["@rules_go//go/runfiles"],
)

filegroup(
    name = "auto_built_binaries",
    srcs = [
        "//orchestrator/cmd/machinator:machinator-linux",
        "//tools/dummy-gemini:dummy-gemini-linux",
    ],
)

sh_test(
    name = "vhs_test",
    srcs = ["check-vhs.sh"],
    data = glob(["*.tape"]) + [
        "//scripts:vhs-docker.sh",
    ],
)