load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "e2e_test",
    srcs = ["main_test.go"],
    data = [
        ":auto_built_binaries",
        "//:AGENTS.md",
        "//:bd",
        "//:go.mod",
        "//:mock-bd.sh",
        "//bootstrap:check_quota.sh",
        "//orchestrator/cmd/machinator",
        "//templates",
        "//testdata/fixture-repo:files",
        "//orchestrator/tools/dummy-gemini",
    ],
    deps = ["@rules_go//go/runfiles"],
)

filegroup(
    name = "auto_built_binaries",
    srcs = [
        "//orchestrator/cmd/machinator:machinator-linux",
        "//orchestrator/tools/dummy-gemini:dummy-gemini-linux",
    ],
)

sh_test(
    name = "vhs_test",
    srcs = ["check-vhs.sh"],
    data = glob(["*.tape"]) + [
        "//scripts:vhs-docker.sh",
    ],
    tags = ["fast"],
)

sh_test(
    name = "vhs_validation",
    srcs = ["run_vhs.sh"],
    data = [
        "//orchestrator/cmd/machinator:machinator-linux",
        "//orchestrator/e2e:crud.tape",
        "//orchestrator/e2e:orchestrator_main.tape",
        "//testdata/vhs-fixture:files",
        "//orchestrator/tools/dummy-gemini:dummy-gemini-linux",
    ],
)
