load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "tui",
    srcs = [
        "logger.go",
        "tui.go",
    ],
    importpath = "github.com/bryantinsley/machinator/backend/internal/tui",
    visibility = ["//backend:__subpackages__"],
    deps = [
        "//backend/internal/beads",
        "//backend/internal/quota",
        "//backend/internal/state",
        "@com_github_gdamore_tcell_v2//:tcell",
        "@com_github_rivo_tview//:tview",
    ],
)
