load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "demo_lib",
    srcs = ["main.go"],
    importpath = "github.com/bryantinsley/machinator/orchestrator/pkg/ui/agentgrid/demo",
    visibility = ["//visibility:private"],
    deps = [
        "//orchestrator/pkg/ui/agentgrid",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
    ],
)

go_binary(
    name = "demo",
    embed = [":demo_lib"],
    visibility = ["//visibility:public"],
)
